--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="dist/main.css" />
+    <link rel="stylesheet" href="dist/css/skeleton.css" />
+    <link rel="stylesheet" href="dist/css/main.css" />
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    <script src="dist/app.js"></script>
+    <script src="dist/js/app.js"></script>
 </body>
 </html>
