--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="dist/css/skeleton.css" />
     <link rel="stylesheet" href="dist/css/main.css" />
+    <link rel="stylesheet" href="dist/css/style.css" />
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 </head>
 <body>
