Add candidate info

--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="dist/css/skeleton.css" />
     <link rel="stylesheet" href="dist/css/main.css" />
     <link rel="stylesheet" href="dist/css/style.css" />
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 </head>
 <body>
+    <script src="dist/js/Chart.min.js"></script>
     <script src="dist/js/app.js"></script>
 </body>
 </html>
