--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
     <script src="dist/js/Chart.min.js"></script>
+    <script src="http://localhost/cdn/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
+    <script src="dist/js/jquery.shapeshift.min.js"></script>
     <script src="dist/js/app.js"></script>
 </body>
 </html>
